fix(ci): Add poetry lock to package-desktop-app workflow

--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Update poetry.lock
         run: poetry lock
 
+      - name: Update poetry.lock
+        run: poetry lock
+
       - name: Install Project Dependencies
         run: poetry install
 
