--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -26,6 +26,21 @@ jobs:
         with:
           python-version: "3.11" # Use a consistent Python version
 
+      - name: Copy pyproject.toml for Windows
+        if: runner.os == 'Windows'
+        run: cp pyproject.toml.win pyproject.toml
+
+      - name: Copy pyproject.toml for macOS
+        if: runner.os == 'macOS'
+        run: cp pyproject.toml.mac pyproject.toml
+
+      - name: Copy pyproject.toml for Linux
+        if: runner.os == 'Linux'
+        run: cp pyproject.toml.linux pyproject.toml
+
+      - name: Update poetry.lock
+        run: poetry lock
+
       - name: Install Poetry
         run: pip install poetry
 
@@ -38,9 +53,6 @@ jobs:
       - name: Install wxPython
         if: runner.os == 'Linux'
         run: pip install "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/wxPython-4.2.2-cp311-cp311-linux_x86_64.whl"
-
-      - name: Update poetry.lock
-        run: poetry lock
 
       - name: Update poetry.lock
         run: poetry lock
