--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -31,6 +31,9 @@ jobs:
           pip install poetry
           poetry self add poetry-plugin-export
 
+      - name: Generate poetry.lock
+        run: poetry lock --no-update
+
       - name: Install system dependencies
         run: |
           sudo apt-get update
