remove unexistent --no-update flag.

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -32,7 +32,7 @@ jobs:
           poetry self add poetry-plugin-export
 
       - name: Generate poetry.lock
-        run: poetry lock --no-update
+        run: poetry lock
 
       - name: Install system dependencies
         run: |
