--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -74,7 +74,12 @@ jobs:
             python3-wxgtk4.0 \
             python3-wxgtk-webview4.0
 
-      - name: Build Package
+      - name: Build Package (macOS)
+        if: runner.os == 'macOS'
+        run: poetry run pyinstaller pyinstaller_specs/devildex_macos.spec --distpath dist/${{ matrix.os }}
+
+      - name: Build Package (Other OS)
+        if: runner.os != 'macOS'
         run: poetry run pyinstaller pyinstaller_specs/devildex_${{ matrix.os }}.spec --distpath dist/${{ matrix.os }}
 
       - name: Upload Artifact
