fix(ci): Add run-id to download-artifact and ensure artifact upload on failure

--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -92,6 +92,7 @@ jobs:
         run: poetry run pyinstaller pyinstaller_specs/devildex_linux.spec --distpath dist/${{ matrix.os }}
 
       - name: Upload Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: devildex-${{ matrix.os }}-build
