--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,6 +116,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }} # Use your PAT here
 
+    - name: Download documentation artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: documentation-html
+        path: documentation-html # Download to a specific directory
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
@@ -131,6 +137,7 @@ jobs:
           build/exe.win-amd64-3.13/*
           build/exe.macosx-*/*
           build/exe.linux-x86_64-3.13/*
-          dist/*.whl # Include wheels as well
+          dist/*.whl
+          documentation-html/* # Include documentation as well
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
