--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,59 +10,16 @@ on:
 
 jobs:
   release:
+    needs: [build-whl-windows, build-whl-macos, build-whl-linux, package-desktop-app, publish-docs]
     if: contains(github.event.head_commit.message, 'release(') # Added condition
     runs-on: ubuntu-latest # Start with ubuntu-latest for initial setup
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0 # Necessario per recuperare tutta la cronologia per i tag
-        token: ${{ secrets.GITHUB_TOKEN }} # Token fornito automaticamente da GitHub
-
-    - name: Set up Python 3.13
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13' # Use Python 3.13 for consistency
-
-    - name: Install Poetry and Packaging Dependencies
-      run: |
-        pip install poetry
-        poetry self add poetry-plugin-export
-        poetry install --only packaging --no-root
-
-    - name: Install OS-specific dependencies (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          libnotify-dev \
-          libgtk-3-dev \
-          libsdl2-dev \
-          libwebkit2gtk-4.1-dev \
-          libxtst-dev \
-          xvfb \
-          bzr \
-          python3-gi \
-          python3-gi-cairo \
-          python3-wxgtk4.0 \
-          python3-wxgtk-webview4.0
-
-    - name: Build Package (Windows)
-      if: runner.os == 'Windows'
-      run: poetry run python packaging/setup_windows.py build
-
-    - name: Build Package (macOS)
-      if: runner.os == 'macOS'
-      run: poetry run python packaging/setup_macos.py build
-
-    - name: Build Package (Linux)
-      if: runner.os == 'Linux'
-      run: poetry run python packaging/setup_linux.py build
+        fetch-depth: 0 # Necessary to fetch all history for tags
+        token: ${{ secrets.GITHUB_TOKEN }} # Automatically provided GitHub token
 
     - name: Configure Git
       run: |
@@ -94,6 +51,14 @@ jobs:
         echo "Error: Commit message does not contain a valid release type (e.g., 'release(patch):', 'release(minor):', 'release(major):')."
         exit 1
 
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.13'
+
+    - name: Install Poetry
+      run: pip install poetry
+
     - name: Increment version with Poetry
       run: poetry version ${{ steps.version_increment.outputs.INCREMENT_TYPE }}
 
@@ -114,13 +79,49 @@ jobs:
         git push origin master
         git push origin v${{ steps.new_version.outputs.VERSION }}
       env:
-        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }} # Use your PAT here
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+
+    - name: Download Windows Wheel artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: devildex-windows-wheel
+        path: artifacts/wheels/windows
+
+    - name: Download macOS Wheel artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: devildex-macos-wheel
+        path: artifacts/wheels/macos
+
+    - name: Download Linux Wheel artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: devildex-linux-wheel
+        path: artifacts/wheels/linux
+
+    - name: Download Windows PyInstaller bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: devildex-windows-latest-build
+        path: artifacts/bundles/windows
+
+    - name: Download macOS PyInstaller bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: devildex-macos-latest-build
+        path: artifacts/bundles/macos
+
+    - name: Download Linux PyInstaller bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: devildex-ubuntu-latest-build
+        path: artifacts/bundles/linux
 
     - name: Download documentation artifact
       uses: actions/download-artifact@v4
       with:
         name: documentation-html
-        path: documentation-html # Download to a specific directory
+        path: artifacts/docs
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
@@ -130,14 +131,16 @@ jobs:
         body: |
           Automated release for version v${{ steps.new_version.outputs.VERSION }}
           
-          ${{ steps.commit_message.outputs.MESSAGE }}
+          ${{ github.event.head_commit.message }}
         draft: false
         prerelease: false
         files: |
-          build/exe.win-amd64-3.13/*
-          build/exe.macosx-*/*
-          build/exe.linux-x86_64-3.13/*
-          dist/*.whl
-          documentation-html/* # Include documentation as well
+          artifacts/wheels/windows/*.whl
+          artifacts/wheels/macos/*.whl
+          artifacts/wheels/linux/*.whl
+          artifacts/bundles/windows/devildex_windows/*
+          artifacts/bundles/macos/devildex_macos/*
+          artifacts/bundles/linux/devildex_linux/*
+          artifacts/docs/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
