fix(ci): Use --no-root --sync with poetry install in package-desktop-app

--- a/.github/workflows/package-desktop-app.yml
+++ b/.github/workflows/package-desktop-app.yml
@@ -60,7 +60,7 @@ jobs:
         run: poetry export -f requirements.txt --output requirements.txt --without-hashes
 
       - name: Install Project Dependencies
-        run: poetry install
+        run: poetry install --no-root --sync
 
       - name: Install OS-specific dependencies (Linux)
         if: runner.os == 'Linux'
