--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -80,7 +80,7 @@ jobs:
         # The --html and --cov flags generate reports that we then upload as artifacts.
         run:
           | # We don't need `poetry run` as dependencies are in the global site-packages.
-          xvfb-run pytest --verbose -n 1 \
+          xvfb-run pytest --verbose \
             --cov=src \
             --cov-report=xml \
             --cov-report=html:coverage_report \
