--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "Release workflow triggered."
 
   release:
-    needs: check_trigger
+    needs: [check_trigger, build, build-macos-wheel, build-windows-wheel, build-package, build-docs]
     if: contains(github.event.head_commit.message, 'release(')
     runs-on: ubuntu-latest # Start with ubuntu-latest for initial setup
 
