--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,8 +49,8 @@ jobs:
     - name: Fail if no increment type found
       if: steps.version_increment.outputs.INCREMENT_TYPE == ''
       run: |
-        echo "Error: Commit message does not contain a valid release type (e.g., 'release(patch):', 'release(minor):', 'release(major):')."
-        exit 1
+        echo "Commit message does not contain a valid release type (e.g., 'release(patch):', 'release(minor):', 'release(major):')."
+        exit 0
 
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
