--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,70 +89,153 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
+
+    - name: Find Build Windows Wheel run ID
+      id: windows_wheel_run
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const runs = await github.rest.actions.listWorkflowRuns({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'build-whl-windows.yml',
+            branch: 'master',
+            status: 'success',
+            per_page: 1
+          });
+          if (runs.data.workflow_runs.length > 0) {
+            core.setOutput('run_id', runs.data.workflow_runs[0].id);
+          }
+
+    - name: Find Build macOS Wheel run ID
+      id: macos_wheel_run
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const runs = await github.rest.actions.listWorkflowRuns({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'build-whl-macos.yml',
+            branch: 'master',
+            status: 'success',
+            per_page: 1
+          });
+          if (runs.data.workflow_runs.length > 0) {
+            core.setOutput('run_id', runs.data.workflow_runs[0].id);
+          }
+
+    - name: Find Build Linux Python Wheel run ID
+      id: linux_wheel_run
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const runs = await github.rest.actions.listWorkflowRuns({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'build-whl-linux.yml',
+            branch: 'master',
+            status: 'success',
+            per_page: 1
+          });
+          if (runs.data.workflow_runs.length > 0) {
+            core.setOutput('run_id', runs.data.workflow_runs[0].id);
+          }
+
+    - name: Find Package Desktop Application run ID
+      id: desktop_app_run
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const runs = await github.rest.actions.listWorkflowRuns({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'package-desktop-app.yml',
+            branch: 'master',
+            status: 'success',
+            per_page: 1
+          });
+          if (runs.data.workflow_runs.length > 0) {
+            core.setOutput('run_id', runs.data.workflow_runs[0].id);
+          }
+
+    - name: Find Publish Documentation run ID
+      id: docs_run
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const runs = await github.rest.actions.listWorkflowRuns({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            workflow_id: 'publish-docs.yml',
+            branch: 'master',
+            status: 'success',
+            per_page: 1
+          });
+          if (runs.data.workflow_runs.length > 0) {
+            core.setOutput('run_id', runs.data.workflow_runs[0].id);
+          }
+
     - name: Download Windows Wheel artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.windows_wheel_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: devildex-windows-wheel
         path: artifacts/wheels/windows
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ github.event.workflow_run.id }}
+        run-id: ${{ steps.windows_wheel_run.outputs.run_id }}
         repository: ${{ github.repository }}
 
     - name: Download macOS Wheel artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.macos_wheel_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: devildex-macos-wheel
-        run-id: ${{ github.event.workflow_run.id }}
+        path: artifacts/wheels/macos
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        run-id: ${{ steps.macos_wheel_run.outputs.run_id }}
         repository: ${{ github.repository }}
 
     - name: Download Linux Wheel artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.linux_wheel_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: devildex-linux-wheel
         path: artifacts/wheels/linux
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ github.event.workflow_run.id }}
+        run-id: ${{ steps.linux_wheel_run.outputs.run_id }}
         repository: ${{ github.repository }}
 
     - name: Download Windows PyInstaller bundle
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.desktop_app_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: devildex-windows-latest-build
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ github.event.workflow_run.id }}
-        repository: ${{ github.repository }}
+        path: artifacts/bundles/windows
+        github-token: ${{ secrets.GITHUB_TOKEN }}\n        run-id: ${{ steps.desktop_app_run.outputs.run_id }}\n        repository: ${{ github.repository }}
 
     - name: Download macOS PyInstaller bundle
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.desktop_app_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: devildex-macos-latest-build
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ github.event.workflow_run.id }}
-        repository: ${{ github.repository }}
+        path: artifacts/bundles/macos
+        github-token: ${{ secrets.GITHUB_TOKEN }}\n        run-id: ${{ steps.desktop_app_run.outputs.run_id }}\n        repository: ${{ github.repository }}
 
     - name: Download Linux PyInstaller bundle
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.desktop_app_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: devildex-ubuntu-latest-build
         path: artifacts/bundles/linux
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ github.event.workflow_run.id }}
-        repository: ${{ github.repository }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}\n        run-id: ${{ steps.desktop_app_run.outputs.run_id }}\n        repository: ${{ github.repository }}
 
     - name: Download documentation artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.docs_run.outputs.run_id != '' }}
       uses: actions/download-artifact@v4
       with:
         name: documentation-html
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ github.event.workflow_run.id }}
-        repository: ${{ github.repository }}
+        path: artifacts/docs
+        github-token: ${{ secrets.GITHUB_TOKEN }}\n        run-id: ${{ steps.docs_run.outputs.run_id }}\n        repository: ${{ github.repository }}
 
     - name: Create GitHub Release
       if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
@@ -160,13 +243,13 @@ jobs:
       with:
         tag_name: v${{ steps.new_version.outputs.VERSION }}
         name: Release v${{ steps.new_version.outputs.VERSION }}
-        body: |
+        body: |\
           Automated release for version v${{ steps.new_version.outputs.VERSION }}
           
           ${{ github.event.workflow_run.head_commit.message }}
         draft: false
         prerelease: false
-        files: |
+        files: |\
           artifacts/wheels/windows/*.whl
           artifacts/wheels/macos/*.whl
           artifacts/wheels/linux/*.whl
