fix(release): Fix syntax error in Download Windows PyInstaller bundle step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,8 +140,12 @@ jobs:
 
     - name: Download Windows PyInstaller bundle
       if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.desktop_app_run.outputs.run_id != '' }}
-      uses: actions/download-artifact@v4
+      with:
+        name: devildex-windows-latest-build
+        path: artifacts/bundles/windows
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         run-id: ${{ github.event.workflow_run.id }}
+        repository: ${{ github.repository }}
 
     - name: Download macOS PyInstaller bundle
       if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' && steps.desktop_app_run.outputs.run_id != '' }}
